# deciles-charts

./: .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPERS.md  LICENSE  README.md  action.yaml  dependabot.yml  justfile  project.yaml  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.prod.in  requirements.prod.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: main.yml  tag.yml
analysis/: deciles_chart.py  deciles_charts.py  study_definition.py
codelists/: codelists.json  codelists.txt  opensafely-systolic-blood-pressure-qof.csv
deciles_chart/: __init__.py  cli.py  core.py
tests/: test_deciles_chart.py  test_deciles_charts.py
