[metadata]
name = deciles-chart-action
version = 0.1.0
author = Iain Dillingham
author_email = iain.dillingham@thedatalab.org
description = Deciles Chart Action
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

[options.entry_points]
console_scripts =
  generate_deciles_chart = deciles_chart.cli:main
